-
Bug
-
Resolution: Done
-
P4: Low
-
5.15.0
-
None
-
-
0ca6837ad76eb23a0e7c5f9981fdb5b8827a0a3e (qt/qtwinextras/dev) 40584f80388ce8eedc6f557d28eb3767b9b5f78b (qt/qtwinextras/5.15)
Src\qtwinextras\src\imports\winextras\qquickiconloader.cpp:44:10: fatal error: QNetworkAccessManager: No such file or directory.
Maybe some missing #ifdef?
| For Gerrit Dashboard: QTBUG-87694 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 318018,3 | Fix compilation with -no-qml-network | dev | qt/qtwinextras | Status: MERGED | +2 | 0 |
| 318181,2 | Fix compilation with -no-qml-network | 5.15 | qt/qtwinextras | Status: MERGED | +2 | 0 |