Fix compilation with -no-qml-network

Add some #ifdefs, rearrange includes.

Pick-to: 5.15
Fixes: QTBUG-87694
Change-Id: Id66b3e62e75873472a3fb7cf57457ace55c18961
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>